--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -56,10 +56,10 @@
         <table class="table table-condensed">
             <thead>
                 <tr>
-                    <th>id</th>
-                    <th>Title</th>
+                    <th>ID</th>
+                    <th>Nombre</th>
                     <th>Disponibilidad</th>
-                    <th>Link</th>
+                    <th>Magnet</th>
                 </tr>
             </thead>
             <tbody>
